fix spacing on coins list

--- a/client/play/css/main.scss
+++ b/client/play/css/main.scss
@@ -124,6 +124,10 @@
   //display: inline-block;
 }
 
+.mech_action {
+  margin-left: 45px;
+}
+
 //=====================================
 #chart {
   position: fixed;
